--- a/app/src/main/res/values-in-rID/strings.xml
+++ b/app/src/main/res/values-in-rID/strings.xml
@@ -94,7 +94,7 @@
   <string name="Cable_Mode">Mode kabel</string>
   <string name="Cable_Mode_Start_Hotspot">Sebelum menghidupkan, pastikan ponsel dan perangkat Anda terhubung ke router yang sama</string>
   <string name="Cable_Mode_Switch_Cancel">Jika dinonaktifkan, ini mungkin menyebabkan offline perangkat, konfirmasikan?</string>
-  <string name="Camera_Outdoor">Kamera (versi luar)</string>
+  <string name="Camera_Outdoor">AI Camera</string>
   <string name="CancelingTips">Membatalkan&#8230;</string>
   <string name="Cellular_Data_Method">Data seluler:</string>
   <string name="Cellular_Data_Set_Up">Aktifkan data Mobile di perangkat, gunakan cara di bawah ini, Settings> Mobile data</string>
