--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -94,7 +94,7 @@
   <string name="Cable_Mode">Modo com fio</string>
   <string name="Cable_Mode_Start_Hotspot">Antes de ligar, verifique se o seu telefone e dispositivo estão conectados ao mesmo roteador</string>
   <string name="Cable_Mode_Switch_Cancel">Desligar pode fazer que o dispositivo esteja offline, tem certeza de desligar?</string>
-  <string name="Camera_Outdoor">Câmera (versão ao ar livre)</string>
+  <string name="Camera_Outdoor">Câmera AI</string>
   <string name="CancelingTips">Cancelando&#8230;</string>
   <string name="Cellular_Data_Method">Dados móveis:</string>
   <string name="Cellular_Data_Set_Up">Ativar dados móveis no dispositivo, use abaixo caminho, Configurações> Dados móveis</string>
