--- a/app/src/main/res/values-tr-rTR/strings.xml
+++ b/app/src/main/res/values-tr-rTR/strings.xml
@@ -94,7 +94,7 @@
   <string name="Cable_Mode">Kablo modu</string>
   <string name="Cable_Mode_Start_Hotspot">Açmadan önce, telefonunuzun ve cihazınızın aynı yönlendiriciye bağlı olduğundan emin olun</string>
   <string name="Cable_Mode_Switch_Cancel">Kapalıysa, cihazın çevrimdışı olmasına neden olabilir, kapalı onaylayın?</string>
-  <string name="Camera_Outdoor">Kamera (Açık Sürüm)</string>
+  <string name="Camera_Outdoor">AI kamera</string>
   <string name="CancelingTips">İptal&#8230;</string>
   <string name="Cellular_Data_Method">Mobil veri:</string>
   <string name="Cellular_Data_Set_Up">Cihazdaki Mobil verileri etkinleştirin, lütfen aşağıdaki şekilde kullanın; Ayarlar> Mobil veri</string>
