--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -94,7 +94,7 @@
   <string name="Cable_Mode">Chế độ cáp</string>
   <string name="Cable_Mode_Start_Hotspot">Trước khi bật, đảm bảo điện thoại và thiết bị của bạn được kết nối với cùng một bộ định tuyến</string>
   <string name="Cable_Mode_Switch_Cancel">Nếu tắt, nó có thể gây ra ngoại tuyến của thiết bị, hãy xác nhận tắt?</string>
-  <string name="Camera_Outdoor">Máy ảnh (Phiên bản ngoài trời)</string>
+  <string name="Camera_Outdoor">Camera AI</string>
   <string name="CancelingTips">Hủy&#8230;</string>
   <string name="Cellular_Data_Method">Dữ liệu di động:</string>
   <string name="Cellular_Data_Set_Up">Bật dữ liệu di động trong thiết bị, vui lòng sử dụng dưới đây, Cài đặt> Dữ liệu di động</string>
